--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.25.0",
     "bootstrap": "5.1.3",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-table": "^6.8.6",
+    "redux": "^4.1.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
