--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5",
     "react-scripts": "5.0.0",
     "react-table": "^6.8.6",
+    "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
     "web-vitals": "^2.1.0"
   },
